src/ast/parsed/snapshots/ast_description_lang__ast__parsed__snapshots.snap
---
source: src/ast/parsed/mod.rs
assertion_line: 169
expression: "Ast::parse(&text).unwrap().transform(&specs)"
input_file: examples/json/example.ast

---
Ok(
    Ast(
        NamedSet(
            {
                Wrapper(
                    Node {
                        ident: Ident(
                            "json",
                        ),
                        kind: Choice {
                            nodes: [
                                TaggedNodeKind {
                                    kind: Node(
                                        Ident(
                                            "object",
                                        ),
                                    ),
                                    tag: None,
                                },
                                TaggedNodeKind {
                                    kind: Node(
                                        Ident(
                                            "array",
                                        ),
                                    ),
                                    tag: None,
                                },
                                TaggedNodeKind {
                                    kind: DynamicToken(
                                        Ident(
                                            "num_lit",
                                        ),
                                    ),
                                    tag: None,
                                },
                                TaggedNodeKind {
                                    kind: DynamicToken(
                                        Ident(
                                            "str_lit",
                                        ),
                                    ),
                                    tag: None,
                                },
                                TaggedNodeKind {
                                    kind: Node(
                                        Ident(
                                            "bool",
                                        ),
                                    ),
                                    tag: None,
                                },
                            ],
                            inline: false,
                        },
                        tag: None,
                    },
                    PhantomData,
                ),
                Wrapper(
                    Node {
                        ident: Ident(
                            "object",
                        ),
                        kind: Delimited(
                            Modified(
                                Node(
                                    Ident(
                                        "member",
                                    ),
                                ),
                                Csv,
                            ),
                            Ident(
                                "brace",
                            ),
                        ),
                        tag: None,
                    },
                    PhantomData,
                ),
                Wrapper(
                    Node {
                        ident: Ident(
                            "member",
                        ),
                        kind: Group {
                            nodes: [
                                TaggedNodeKind {
                                    kind: DynamicToken(
                                        Ident(
                                            "str_lit",
                                        ),
                                    ),
                                    tag: None,
                                },
                                TaggedNodeKind {
                                    kind: StaticToken(
                                        Ident(
                                            "colon",
                                        ),
                                    ),
                                    tag: None,
                                },
                                TaggedNodeKind {
                                    kind: Node(
                                        Ident(
                                            "json",
                                        ),
                                    ),
                                    tag: None,
                                },
                            ],
                            inline: false,
                        },
                        tag: None,
                    },
                    PhantomData,
                ),
                Wrapper(
                    Node {
                        ident: Ident(
                            "array",
                        ),
                        kind: Delimited(
                            Modified(
                                Node(
                                    Ident(
                                        "json",
                                    ),
                                ),
                                Csv,
                            ),
                            Ident(
                                "bracket",
                            ),
                        ),
                        tag: None,
                    },
                    PhantomData,
                ),
                Wrapper(
                    Node {
                        ident: Ident(
                            "bool",
                        ),
                        kind: Choice {
                            nodes: [
                                TaggedNodeKind {
                                    kind: StaticToken(
                                        Ident(
                                            "kw_true",
                                        ),
                                    ),
                                    tag: None,
                                },
                                TaggedNodeKind {
                                    kind: StaticToken(
                                        Ident(
                                            "kw_false",
                                        ),
                                    ),
                                    tag: None,
                                },
                            ],
                            inline: false,
                        },
                        tag: None,
                    },
                    PhantomData,
                ),
            },
        ),
    ),
)
